--- a/Hosts/VS/TddStud10App/TddStud10App.csproj
+++ b/Hosts/VS/TddStud10App/TddStud10App.csproj
@@ -221,7 +221,7 @@
       <Project>{d6d4d595-14e0-4631-9ff5-f33976e08b34}</Project>
       <Name>TestHost</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\CommonUI\CommonUI.csproj">
+    <ProjectReference Include="..\CommonUI\CommonUI.csproj">
       <Project>{c578a684-2fff-4100-8620-c1220d05ea3e}</Project>
       <Name>CommonUI</Name>
     </ProjectReference>
