--- a/Hosts/VS/TddStudioPackage.Core.UnitTests/TddStudioPackage.Core.UnitTests.fsproj
+++ b/Hosts/VS/TddStudioPackage.Core.UnitTests/TddStudioPackage.Core.UnitTests.fsproj
@@ -122,7 +122,7 @@
       <Project>{e5fb2292-1833-4c4c-800e-a31ac891a931}</Project>
       <Private>True</Private>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\CommonUI\CommonUI.csproj">
+    <ProjectReference Include="..\CommonUI\CommonUI.csproj">
       <Name>CommonUI</Name>
       <Project>{c578a684-2fff-4100-8620-c1220d05ea3e}</Project>
       <Private>True</Private>
