--- a/RealTimeEtwListener/packages.config
+++ b/RealTimeEtwListener/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="BuildTools.FxCop" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.TraceEvent" version="1.0.26" targetFramework="net45" />
+  <package id="StyleCop.MSBuild" version="4.7.54.0" targetFramework="net45" developmentDependency="true" />
 </packages>
