--- a/TestExecution/TestRuntime/packages.config
+++ b/TestExecution/TestRuntime/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.Diagnostics.Tracing.EventRegister" version="1.0.26" targetFramework="net35" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource" version="1.0.26" targetFramework="net35" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.0.26" targetFramework="net35" />
+  <package id="StyleCop.MSBuild" version="4.7.54.0" targetFramework="net35" developmentDependency="true" />
 </packages>
