--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 version: 1.0.{build}
-image: Visual Studio 2013
+image: 
+- Visual Studio 2013
+- Visual Studio 2013
 configuration: Release
 platform: Any CPU
 build:
