--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -7,11 +7,11 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>e5fb2292-1833-4c4c-800e-a31ac891a931</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Engine.Core</RootNamespace>
+    <RootNamespace>R4nd0mApps.TddStud10.Engine.Core</RootNamespace>
     <AssemblyName>R4nd0mApps.TddStud10.Engine.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
-    <Name>Engine.Core</Name>
+    <Name>R4nd0mApps.TddStud10.Engine.Core</Name>
     <NuGetPackageImportStamp>f95bee51</NuGetPackageImportStamp>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\Engine.Core.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\R4nd0mApps.TddStud10.Engine.Core.XML</DocumentationFile>
     <OtherFlags>--keyfile:..\tddstud10.snk</OtherFlags>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -33,7 +33,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Release\Engine.Core.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\R4nd0mApps.TddStud10.Engine.Core.XML</DocumentationFile>
     <OtherFlags>--keyfile:..\tddstud10.snk</OtherFlags>
   </PropertyGroup>
   <PropertyGroup>
