--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 !CSXUnit1xNUnit3x.sln.tddstud10.user
 *.userosscache
 *.sln.docstates
+*.received.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
