--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,3 +25,10 @@ notifications:
   on_build_success: true
   on_build_failure: true
   on_build_status_changed: true
+
+artifacts:
+  - path: '%APPVEYOR_BUILD_FOLDER%\*.vsix'
+    name: TddStud10 Visual Studio Extension
+	 
+  - path: '**\approvals\*.txt'
+    name: Approval Test Artifacts for debugging
