Investigating approval test failure on build machine

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,3 +32,6 @@ artifacts:
 
   - path: '**\approvals\*.txt'
     name: Approval Test Artifacts for debugging
+
+on_finish:
+- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
