--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,12 +26,8 @@ notifications:
   on_build_failure: true
   on_build_status_changed: true
 
-artifacts:
-  - path: '%APPVEYOR_BUILD_FOLDER%\*.vsix'
-    name: TddStud10 Visual Studio Extension
-
-  - path: '**\approvals\*.txt'
-    name: Approval Test Artifacts for debugging
-
 on_finish:
 - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
+deploy_script:
+- ps: dir -rec -filt approvals -Directory | % { dir $_.FullName } | % { Push-AppveyorArtifact $_ -FileName $_.Name }
