--- a/Common/Domain.UnitTests/Domain.UnitTests.fsproj
+++ b/Common/Domain.UnitTests/Domain.UnitTests.fsproj
@@ -10,7 +10,7 @@
     <ProjectGuid>b8c86b59-c6c4-459c-967a-5e8c0111c433</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Domain.UnitTests</RootNamespace>
-    <AssemblyName>Domain.UnitTests</AssemblyName>
+    <AssemblyName>R4nd0mApps.TddStud10.Common.Domain.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -64,6 +64,9 @@
     <Reference Include="Mono.Cecil">
       <HintPath>..\..\packages\Mono.Cecil.0.9.6.0\lib\net40\Mono.Cecil.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="FilePathTests.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
