Making engine hostable in preparation for #12 (#40)
Engine is now hostable with tests enforcing the Engine's contact with host. This is a prep work for #12.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,21 @@
 version: 1.0.{build}
-image: 
+
+image:
 - Visual Studio 2013
 - Visual Studio 2015
+
 configuration: Release
+
 platform: Any CPU
-build:
-  project: TddStud10.sln
-  parallel: true
-  verbosity: minimal
+
+build_script:
+- cmd: .\build.cmd Build
+
 test:
-  assemblies: '**\*.UnitTests.dll'
+  assemblies:
+  - .\build\*.UnitTests.dll
+  - .\build\*.ContractTests.dll
+
 notifications:
 - provider: Email
   to:
