additional contract tests

--- a/Engine.ContractTests/Engine.ContractTests.fsproj
+++ b/Engine.ContractTests/Engine.ContractTests.fsproj
@@ -54,9 +54,13 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="ContractTests.fs" />
+    <None Include="approvals\ContractTests.E2E Run for Project.ForScenario.CSXUnit1xNUnit3x.NET20.approved.txt" />
+    <None Include="approvals\ContractTests.E2E Run for Project.ForScenario.VBXUnit1xNUnit2x.NET40.approved.txt" />
+    <None Include="approvals\ContractTests.E2E Run for Project.ForScenario.FSXUnit2xNUnit2x.NET45.approved.txt" />
     <Content Include="packages.config" />
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Helpers.fs" />
+    <Compile Include="ContractTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="ApprovalTests">
