--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: 1.0.{build}
 
 image:
-- Visual Studio 2013
+#- Visual Studio 2013
 - Visual Studio 2015
 
 configuration: Release
@@ -23,3 +23,8 @@ notifications:
   on_build_success: true
   on_build_failure: true
   on_build_status_changed: true
+
+#
+#on_finish:
+#- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+#
