--- a/TestHost/packages.config
+++ b/TestHost/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.Diagnostics.Tracing.EventRegister" version="1.0.26" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource" version="1.0.26" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.0.26" targetFramework="net45" />
+  <package id="Mono.Cecil" version="0.9.6.4" targetFramework="net40" />
   <package id="StyleCop.MSBuild" version="4.7.54.0" targetFramework="net40" developmentDependency="true" />
 </packages>
